--- a/loginFB.html
+++ b/loginFB.html
@@ -5,6 +5,7 @@
 <meta charset="UTF-8">
 </head>
 <body>
+  <p>TEST</p>
 <script>
 
   function statusChangeCallback(response) {  // Called with the results from FB.getLoginStatus().
@@ -31,7 +32,7 @@
       appId      : '571134107111743',
       cookie     : true,                     // Enable cookies to allow the server to access the session.
       xfbml      : true,                     // Parse social plugins on this webpage.
-      version    : '7.0'                     // Use this Graph API version for this call.
+      version    : 7.0                     // Use this Graph API version for this call.
     });
 
 
