--- a/loginFB.html
+++ b/loginFB.html
@@ -32,7 +32,7 @@
       appId      : '571134107111743',
       cookie     : true,                     // Enable cookies to allow the server to access the session.
       xfbml      : true,                     // Parse social plugins on this webpage.
-      version    : 7.0                     // Use this Graph API version for this call.
+      version    : 'v7.0'                    // Use this Graph API version for this call.
     });
 
 
