--- a/loginFB.html
+++ b/loginFB.html
@@ -28,19 +28,18 @@ window.fbAsyncInit = () => {
 			getUserData();
 		} else {
 			//user is not authorized
+			console.log('USER NO AUTORIZO');
 		}
 	});
 };
-
-//load the JavaScript SDK
-((d, s, id) => {
-	var js, fjs = d.getElementsByTagName(s)[0];
-	if (d.getElementById(id)) {return;}
-	js = d.createElement(s); js.id = id;
-	js.src = "//connect.facebook.com/en_US/sdk.js";
-	fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));
-
+  (function(d, s, id) {                      // Load the SDK asynchronously
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "https://connect.facebook.net/en_US/sdk.js";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));
+	  
 //add event listener to login button
 document.getElementById('loginBtn').addEventListener('click', () => {
 	//do the login
